7.24.5 (24-02-2025)
- Refactor: Move PrecedentDegreeInformation relations from the StudentCandidacy to Registration [#qubIT-Fenix-6617]

7.24.4 (19-02-2025)
- Refactor: Removes unused viewRegistrationDetailsTreasuryDebtAccountLink_ulisboa_specification [#qubIT-Fenix-6559]
- Refactor: Removes reference to StudentCandidacy numberOfCandidaciesToHigherSchool [#qubIT-Fenix-6559]
- Improvement: Add last validation date to personal specifications [#UL-REIT-4199]

7.24.3 (07-02-2025)
- Refactor: Remove ExceptionHandlers since they are made redundant by recent fenixedu-base changes [#qubIT-Omnis-8439]
- Refactor: Removes unused ManageRegistrationEntryGradeController [#qubIT-Fenix-6559]

7.24.2 (04-02-2025)
- Refactor: Remove reference to non-existing method [#UL-ISA-5417]

7.24.1 (30-01-2025)
- Refactor: Remove usages of ITreasuryBriggeAPI [#qubIT-Fenix-6565]

7.24.0 (29-01-2025)
- Improvement: Replaces all code that sends academic-core Messages and replaces with signals that will send CommunicationMessage [#qubIT-Omnis-8403] 

7.23.0 (27-01-2025)
- Refactor: Remove references to deprecated GradeScaleEnum related domain [#qubIT-Fenix-1784]

7.22.0 (15-01-2025)
- Refactor: Changes sendConcludeEmail to use SystemSender [#qubIT-Omnis-7780]

7.21.5 (13-01-2025)
- Refactor: change references of EntryPhase to AdmissionPhase [#qubIT-Fenix-5905]

7.21.4 (16-12-2024)
- Bug Fix: When retrieving the PersonCustomer#getActiveCustomer(), validate that the active customer is found. If it is not, throw exception [#qubIT-Fenix-6386]

7.21.3 (12-12-2024)
- Refactor: Delete SAS/SICABE JSP and controllers [#qubIT-Fenix-6343]

7.21.2 (05-11-2024)
- Bug Fix: Fix error in submiting angular form, which the angular logic was colliding with the support form [#qubIT-Fenix-6049]

7.21.1 (22-10-2024)
- Bug fix: Allow to create old service requests for degrees without admin office [#UL-FBA-1899]

7.21.0 (17-10-2024)
- Refactor: Add subclasses of RegistrationState [#qubIT-Fenix-5944] 