@@ -1,3 +1,5 @@
+- Refactor: Remove dependency of StudentCandidacy from StudentActive algorithm [#qubIT-Fenix-6559]
+
 7.24.5 (24-02-2025)
 - Refactor: Move PrecedentDegreeInformation relations from the StudentCandidacy to Registration [#qubIT-Fenix-6617]
 
